k8s/web-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/local/bin/kompose convert -o k8s
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web-client
  name: web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/local/bin/kompose convert -o k8s
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/boilerplate-network: "true"
        io.kompose.service: web-client
    spec:
      containers:
        - image: web-client
          name: web-client
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
      volumes:
        - name: web-client-claim0
          persistentVolumeClaim:
            claimName: web-client-claim0
        - name: web-client-claim1
          persistentVolumeClaim:
            claimName: web-client-claim1
        - name: web-client-claim2
          persistentVolumeClaim:
            claimName: web-client-claim2
        - name: notused
          persistentVolumeClaim:
            claimName: notused
status: {}
