k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    io.kompose.service: web-client
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  name: web-client
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: web-client
    weight: 100
  wildcardPolicy: None
